Fix a long word overflowing message box

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,7 @@ a {
 	margin-bottom: 15px;
 	background-color: var(--light-color);
 	border-radius: 5px;
+	overflow-wrap: break-word;
 }
 
 .chat-messages .message .meta {
